Fix navbar on mobile. This releates to other changes made to navbar. It seems some new classes were added and fixes have been applied to fixes since. The latest I made caused an issue on mobile which I resolve here, however the whole navbar really needs looking at again.

--- a/style/menu.css
+++ b/style/menu.css
@@ -193,6 +193,11 @@ color: [[setting:headertextcolor]];
 	.hbl, .sbl, .hbll, .sbll {
             display: none !important;
 	}
+	
+	.nav-collapse .nav {
+		width:100%;	
+		margin-left:10px !important;	
+	}
 
 	#navwrap {
             border-bottom: 0;
@@ -211,10 +216,15 @@ color: [[setting:headertextcolor]];
 		background: [[setting:mobilemenubkcolor]];
 		height: auto;
 		top: 6px;	
+		padding-bottom:4px;
 	}
 
 	.nav-collapse.active > .nav > li > a, .nav-collapse.active > .nav .dropdown-menu li > a {
 		color:[[setting:mobilemenufontcolor]] !important;
+	}
+	
+	#edittingbutton {
+		margin-left:10px;
 	}
 }
 
